--- a/index.html
+++ b/index.html
@@ -95,10 +95,46 @@
 
     <h4 class="index-headers">Asia</h4>
     <section class="all-posts_container" id="posts-main-page_container-asia">
+      <div class="loading_container" id="loading_container">
+        <div class="loading_post">
+          <div class="loading loading_img"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+        </div>
+        <div class="loading_post">
+          <div class="loading loading_img"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+        </div>
+      </div>
     </section>
 
     <h5 class="index-headers">Europe</h5>
     <section class="all-posts_container container-asia" id="posts-main-page_container-europe">
+      <div class="loading_container" id="loading_container">
+        <div class="loading_post">
+          <div class="loading loading_img"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+        </div>
+        <div class="loading_post">
+          <div class="loading loading_img"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+        </div>
+      </div>
     </section>
     <span class="index-headers delete">!!Delete!!</span>
   </main>
