--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
@@ -89,8 +89,7 @@
     </section>
 
     <section class="all-posts-cta_container">
-      <button class="all-posts-cta" id="last-page-cta" disabled><i class="fa-solid fa-chevron-left"></i> Last Page</button>
-      <button class="all-posts-cta" id="next-page-cta">Next Page <i class="fa-solid fa-chevron-right"></i></button>
+      <button class="load-more-cta" id="load-more-cta">Load More Posts <i class="fa-solid fa-arrow-down"></i></button>
     </section>
   </main>
 
