--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -53,8 +53,8 @@
       <nav id="header_nav" class="header_nav">
         <div class="triangle-nav"></div>
         <ul>
-          <li ><div class="nav-selected"></div><a class="navItem" href="index.html">HOME <i class="fa-solid fa-house"></i></a></li>
-          <li><a class="navItem" href="list-of-posts.html">POSTS <i class="fa-solid fa-newspaper"></i></a></li>
+          <li><a class="navItem" href="index.html">HOME <i class="fa-solid fa-house"></i></a></li>
+          <li><div class="nav-selected"></div><a class="navItem" href="list-of-posts.html">POSTS <i class="fa-solid fa-newspaper"></i></a></li>
           <li><a class="navItem" href="about.html">ABOUT US <i class="fa-solid fa-book"></i></a></li>
           <li><a class="navItem" href="contact.html">CONTACT US <i class="fa-solid fa-phone"></i></a></li>
         </ul>
