--- a/about.html
+++ b/about.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>The Traveler Blog | Home Page</title>
-  <meta name="description" content="We who travel, we are never sure if the information we see online can be trusted. This ends now with the new travel blog made by travelers for travelers">
+  <title>The Traveler Blog | About Us</title>
+  <meta name="description" content="A little backstory into what is important to us, we would like you to come along on this journey.">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
@@ -21,10 +20,9 @@
       a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
-
   <script src="https://kit.fontawesome.com/54f19440a6.js" crossorigin="anonymous"></script>
   <link href="styles.css" rel="stylesheet">
-  <script defer src="js/index.js" type="module"></script>
+  <script defer src="js/contact.js" type="module"></script>
 </head>
 
 
@@ -61,8 +59,6 @@
     </section>
   </header>
 
-
-  
   <main>
     <section class="about_container">
 
