--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   </script>
   <script src="https://kit.fontawesome.com/54f19440a6.js" crossorigin="anonymous"></script>
   <link href="styles.css" rel="stylesheet">
-  <script defer src="js/contact.js" type="module"></script>
+  <script defer src="js/about.js" type="module"></script>
 </head>
 
 
