size and color w3

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </div>
       </div>
       <div class="carousel_container" id="carousel_container"></div>
-      <button class="cta-latest-posts cta-last-post" id="cta-last-post"><i class="fa-solid fa-chevron-left"></i></button>
-      <button class="cta-latest-posts cta-next-post" id="cta-next-post"><i class="fa-solid fa-chevron-right"></i></button>
+      <button class="cta-latest-posts cta-last-post" id="cta-last-post"><i class="fa-solid fa-chevron-left"></i><span class="display-none">!!!Delete!!!</span></button>
+      <button class="cta-latest-posts cta-next-post" id="cta-next-post"><i class="fa-solid fa-chevron-right"></i><span class="display-none">!!!Delete!!!</span></button>
     </section>
 
     <h4 class="index-headers">Asia</h4>
