--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
       </div>
     </section>
-    <span class="index-headers delete">!!Delete!!</span>
+    <div class="index-headers"><span class="display-none">!!Delete!!</span></div>
   </main>
 
 
