delete header span w3

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
         <a href="list-of-posts.html" class="cta-header"><i class="fa-solid fa-newspaper"></i> POSTS</a>
       </section>
       <button class="hamburger">
+        <span class="display-none">!!Delete!!</span>
         <i class="icon-hamburger fa-solid fa-bars"></i>
         <i class="icon-close fa-solid fa-xmark"></i>
       </button>
