--- a/about.html
+++ b/about.html
@@ -36,17 +36,15 @@
           <p class="logo_text">The Traveler Blog</p>
         </a>
       </div>
-
       <section class="cta-header_container">
         <a href="index.html" class="cta-header"><i class="fa-solid fa-house"></i> HOME</a>
         <a href="list-of-posts.html" class="cta-header"><i class="fa-solid fa-newspaper"></i> POSTS</a>
       </section>
-      
       <button class="hamburger">
+        <span class="display-none">!!Delete!!</span>
         <i class="icon-hamburger fa-solid fa-bars"></i>
         <i class="icon-close fa-solid fa-xmark"></i>
       </button>
-
       <nav id="header_nav" class="header_nav">
         <div class="triangle-nav"></div>
         <ul>
