--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -31,7 +31,6 @@
 
 <body>
   <header>
-
     <section class="header">
       <div>
         <a href="index.html" class="logo_container">
@@ -39,17 +38,15 @@
           <p class="logo_text">The Traveler Blog</p>
         </a>
       </div>
-
       <section class="cta-header_container">
         <a href="index.html" class="cta-header"><i class="fa-solid fa-house"></i> HOME</a>
         <a href="list-of-posts.html" class="cta-header"><i class="fa-solid fa-newspaper"></i> POSTS</a>
       </section>
-      
       <button class="hamburger">
+        <span class="display-none">!!Delete!!</span>
         <i class="icon-hamburger fa-solid fa-bars"></i>
         <i class="icon-close fa-solid fa-xmark"></i>
       </button>
-
       <nav id="header_nav" class="header_nav">
         <div class="triangle-nav"></div>
         <ul>
