list of posts delete w3

--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -67,9 +67,8 @@
     <section class="form_container">
       <form action="" method="GET" class="form-list-of-posts">
         <div>
-          <button type="submit" class="search-icon" disabled><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button type="submit" class="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
           <input type="text" id="search" name="search" placeholder="Search..." class="search-input">
-          <label for="search"></label>
         </div>
         <div class="checkbox_container">
           <input type="checkbox" id="newest-to-oldest" name="newest-to-oldest" class="list-of-posts_checkboxes">
