--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -69,6 +69,7 @@
         <div>
           <button type="submit" class="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
           <input type="text" id="search" name="search" placeholder="Search..." class="search-input">
+          <label for="search"><span class="display-none">!!Delete!!</span></label>
         </div>
         <div class="checkbox_container">
           <input type="checkbox" id="newest-to-oldest" name="newest-to-oldest" class="list-of-posts_checkboxes">
