--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -85,6 +85,17 @@
     <section class="all-posts_container" id="all-posts_container">
     </section>
 
+    <template id="list-of-posts_template">
+      <div class="loading_post" id="loading_post">
+        <div class="loading loading_img"></div>
+        <div class="loading loading-text"></div>
+        <div class="loading loading-text"></div>
+        <div class="loading loading-text"></div>
+        <div class="loading loading-text"></div>
+        <div class="loading loading-text"></div>
+      </div>
+    </template>
+
     <section class="all-posts-cta_container">
       <button class="load-more-cta" id="load-more-cta">Load More Posts <i class="fa-solid fa-arrow-down"></i></button>
     </section>
