--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
             <div>
               <label for="email">Email</label>
               <input type="text" id="email" name="email" class="input email">
-              <div class="error-text" id="email_error"></div>
+              <div class="error-text email-error" id="email_error"></div>
             </div>
             <div>
               <label for="subject">Subject</label>
