--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -67,7 +67,7 @@
     <section class="form_container">
       <form action="" method="GET" class="form-list-of-posts">
         <div>
-          <button type="submit" class="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button type="submit" class="search-icon" id="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
           <input type="text" id="search" name="search" placeholder="Search..." class="search-input">
           <label for="search"><span class="display-none">!!Delete!!</span></label>
         </div>
