--- a/specifics.html
+++ b/specifics.html
@@ -63,6 +63,20 @@
   
   <main>
     <section class="specifics-all_container" id="specifics-all_container">
+        <div class="specifics-loading_container">
+          <div class="loading loading-title"></div>
+          <div class="specifics_img loading"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-title"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+        </div>
     </section>
 
     <section class="feedback_container">
