--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>The Traveler Blog | Home Page</title>
-  <meta name="description" content="We who travel, we are never sure if the information we see online can be trusted. This ends now with the new travel blog made by travelers for travelers">
+  <title>The Traveler Blog | All Posts</title>
+  <meta name="description" content="All the posts and tips in one place, take a look and you wont be disappointed">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
