--- a/specifics.html
+++ b/specifics.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>The Traveler Blog | </title>
-    <meta name="description" content="We who travel, we are never sure if the information we see online can be trusted. This ends now with the new travel blog made by travelers for travelers">
+    <meta name="description" content="">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
