validator.w3 logo id

--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -24,7 +24,7 @@
     <section class="header">
       <div>
         <a href="index.html" class="logo_container">
-          <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo" class="logo">
+          <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo-header" class="logo">
           <p class="logo_text">The Traveler Blog</p>
         </a>
       </div>
@@ -101,7 +101,7 @@
       </div>
       <div class="footer-logo_container">
         <a href="index.html" class="logo_container footer-logo_container">
-          <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo" class="logo">
+          <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo-footer" class="logo">
           <p class="logo_text">The Traveler Blog</p>
         </a>
       </div>
