specifics and error handling simplified

--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -47,17 +47,14 @@
         </ul>
       </nav>
     </section>
-
   </header>
 
-
-  
   <main>
     <h1 class="list-of-posts-header"><span class="header-span">Everything and More</span></h1>    
     <section class="form_container">
       <form action="" method="GET" class="form-list-of-posts">
         <div>
-          <button type="submit" class="search-icon" id="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button type="show" class="search-icon" id="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
           <input type="text" id="search" name="search" placeholder="Search..." class="search-input">
           <label for="search"><span class="display-none">!!Delete!!</span></label>
         </div>
@@ -90,8 +87,6 @@
       <button class="load-more-cta" id="load-more-cta">Load More Posts <i class="fa-solid fa-arrow-down"></i></button>
     </section>
   </main>
-
-
 
   <footer>
     <section class="footer_container">
