--- a/specifics.html
+++ b/specifics.html
@@ -69,7 +69,7 @@
         </div>
     </section>
 
-    <section class="feedback_container">
+    <!-- <section class="feedback_container">
       <h5>Feedback</h5>
       <p class="feedback_text">Did You Find This Post Helpful or Educational?</p>
       <form action="./php/send-comment.php" method="GET">
@@ -84,10 +84,7 @@
         </div>
         <button class="cta-send" id="cta-send" disabled>SEND IN</button>
       </form>
-    </section>
-
-    <section class="other-posts_container">
-    </section>
+    </section> -->
   </main>
 
 
