--- a/contact.html
+++ b/contact.html
@@ -18,19 +18,18 @@
 
 <body>
   <header>
-    <section class="header">
+    <div class="header">
       <div>
         <a href="index.html" class="logo_container">
           <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo-header" class="logo">
           <p class="logo_text">The Traveler Blog</p>
         </a>
       </div>
-      <section class="cta-header_container">
+      <div class="cta-header_container">
         <a href="index.html" class="cta-header"><i class="fa-solid fa-house"></i> HOME</a>
         <a href="list-of-posts.html" class="cta-header"><i class="fa-solid fa-newspaper"></i> POSTS</a>
-      </section>
-      <button class="hamburger">
-        <span class="display-none">!!Delete!!</span>
+      </div>
+      <button class="hamburger"><span class="display-none">!!!Delete!!!</span>
         <i class="icon-hamburger fa-solid fa-bars"></i>
         <i class="icon-close fa-solid fa-xmark"></i>
       </button>
@@ -43,11 +42,12 @@
           <li><div class="nav-selected"></div><a class="navItem" href="contact.html">CONTACT US <i class="fa-solid fa-phone"></i></a></li>
         </ul>
       </nav>
-    </section>
+    </div>
   </header>
+
+
   <main>
     <section class="contact_container">
-
       <div class="contact-img_container">
         <img src="/pictures/contact.jpg" class="contact_img" alt="picture of Matt and John from our team at The Traveler Blog">
       </div>
@@ -83,6 +83,7 @@
       </div>
     </section>
   </main>
+  
   <footer>
     <section class="footer_container">
       <div class="footer-nav_container">
