--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -53,7 +53,7 @@
     <h1 class="list-of-posts-header"><span class="header-span">Everything and More</span></h1>    
     <section class="form_container">
       <form action="" method="GET" class="form-list-of-posts">
-        <div>
+        <div class="search_container">
           <button type="show" class="search-icon" id="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
           <input type="text" id="search" name="search" placeholder="Search..." class="search-input">
           <label for="search"><span class="display-none">!!Delete!!</span></label>
