--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,6 @@
     </div>
   </header>
 
-
   <main>
     <section class="contact_container">
       <div class="contact-img_container">
@@ -85,7 +84,7 @@
   </main>
   
   <footer>
-    <section class="footer_container">
+    <div class="footer_container">
       <div class="footer-nav_container">
         <a href="contact.html" class="footer-nav"><i class="fa-solid fa-phone"></i> CONTACTS US</a>
         <a href="about.html" class="footer-nav"><i class="fa-solid fa-book"></i> ABOUT US</a>
@@ -96,7 +95,7 @@
           <p class="logo_text">The Traveler Blog</p>
         </a>
       </div>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
