--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -17,21 +17,19 @@
   <script src="js/list-of-posts.js" type="module"></script>
 </head>
 
-
-
 <body>
   <header>
-    <section class="header">
+    <div class="header">
       <div>
         <a href="index.html" class="logo_container">
           <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo-header" class="logo">
           <p class="logo_text">The Traveler Blog</p>
         </a>
       </div>
-      <section class="cta-header_container">
+      <div class="cta-header_container">
         <a href="index.html" class="cta-header"><i class="fa-solid fa-house"></i> HOME</a>
         <a href="list-of-posts.html" class="cta-header"><i class="fa-solid fa-newspaper"></i> POSTS</a>
-      </section>
+      </div>
       <button class="hamburger">
         <span class="display-none">!!Delete!!</span>
         <i class="icon-hamburger fa-solid fa-bars"></i>
@@ -46,7 +44,7 @@
           <li><a class="navItem" href="contact.html">CONTACT US <i class="fa-solid fa-phone"></i></a></li>
         </ul>
       </nav>
-    </section>
+    </div>
   </header>
 
   <main>
@@ -83,13 +81,13 @@
       </div>
     </template>
 
-    <section class="all-posts-cta_container">
+    <div class="all-posts-cta_container">
       <button class="load-more-cta" id="load-more-cta">Load More Posts <i class="fa-solid fa-arrow-down"></i></button>
-    </section>
+    </div>
   </main>
 
   <footer>
-    <section class="footer_container">
+    <div class="footer_container">
       <div class="footer-nav_container">
         <a href="contact.html" class="footer-nav"><i class="fa-solid fa-phone"></i> CONTACTS US</a>
         <a href="about.html" class="footer-nav"><i class="fa-solid fa-book"></i> ABOUT US</a>
@@ -100,7 +98,7 @@
           <p class="logo_text">The Traveler Blog</p>
         </a>
       </div>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
