--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -49,10 +49,10 @@
 
   <main>
     <h1 class="list-of-posts-header"><span class="header-span">Everything and More</span></h1>    
-    <section class="form_container">
-      <form action="" method="GET" class="form-list-of-posts">
+    <div class="form_container">
+      <form action="#" method="GET" class="form-list-of-posts">
         <div class="search_container">
-          <button type="show" class="search-icon" id="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button type="button" class="search-icon" id="search-icon" disabled><span class="display-none">!!Delete!!</span><i class="fa-solid fa-magnifying-glass"></i></button>
           <input type="text" id="search" name="search" placeholder="Search..." class="search-input">
           <label for="search"><span class="display-none">!!Delete!!</span></label>
         </div>
@@ -65,7 +65,7 @@
           <label for="oldest-to-newest">Oldest to Newest</label>
         </div>
       </form>
-    </section>
+    </div>
 
     <section class="all-posts_container" id="all-posts_container">
     </section>
