form and more php

--- a/specifics.html
+++ b/specifics.html
@@ -72,7 +72,7 @@
     <!-- <section class="feedback_container">
       <h5>Feedback</h5>
       <p class="feedback_text">Did You Find This Post Helpful or Educational?</p>
-      <form action="./php/send-comment.php" method="GET">
+      <form action="./php/send-comment.php" method="POST">
         <div class="feedback-cta_container">
           <button class="feedback-btn cta-like"><i class="fa-solid fa-thumbs-up"></i></button>
           <button class="feedback-btn cta-dislike"><i class="fa-solid fa-thumbs-down"></i></button>
