--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         <p class="contact-paragraph">We're here to help! Please reach out with any questions or inquiries.</p>
 
         <div class="form-contact_container" id="form-contact_container">
-          <form action="./php/send-contact.php" method="GET" class="form-contact" id="form-contact">
+          <form action="./php/send-contact.php" method="POST" class="form-contact" id="form-contact">
             <div>
               <label for="name">Full Name</label>
               <input type="text" id="name" name="name" class="input name">
